apps/production/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: production
  labels:
    app: todo-app
    environment: production

spec:
  type: ClusterIP 
  selector:
    app: todo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: http
